--- a/Quality/Quality/Areas/BulkFGT/Views/HeatTransferWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/HeatTransferWash/Index.cshtml
@@ -345,8 +345,8 @@
                                     <td><h5>Teamwear</h5></td>
                                     <td>
                                         <div class="input-group">
-                                            @Html.CheckBoxFor(o => o.Main.IsTeamwear, new { @class = "bigSize Readonly", @style = "flex-grow: 0;" })
-                                            <label for="Main_IsTeamwear" style="padding: 5px;">Teamwear</label>
+                                            @Html.CheckBoxFor(o => o.Main.Teamwear, new { @class = "bigSize Readonly", @style = "flex-grow: 0;" })
+                                            <label for="Main_Teamwear" style="padding: 5px;">Teamwear</label>
                                         </div>
                                     </td>
                                     <td><h5>Received Date</h5></td>
@@ -387,6 +387,7 @@
                                     <th style="width: 13vw; "><h4>HT Ref No.</h4></th>
                                     <th style="width: 5vw;"><h4>HT-Tempereture</h4></th>
                                     <th style="width: 6vw;"><h4>HT-Time(Sec)</h4></th>
+                                    <th style="width: 6vw;"><h4>2nd HT-Time(Sec)</h4></th>
                                     <th style="width: 6vw; "><h4>HT-Pressure</h4></th>
                                     <th style="width: 5vw;"><h4>Peel Off</h4></th>
                                     <th style="width: 5vw;"><h4>Washing Cycles</h4></th>
@@ -416,16 +417,19 @@
                                         </td>
 
                                         <td>
-                                            @Html.TextBoxFor(o => Model.Details[i].Temperature, new { @class = "OnlyEdit" ,@type="number"})
+                                            @Html.TextBoxFor(o => Model.Details[i].Temperature, new { @class = "OnlyEdit", @type = "number" })
                                         </td>
                                         <td>
                                             @Html.TextBoxFor(o => Model.Details[i].Time, new { @class = "OnlyEdit", @type = "number" })
                                         </td>
                                         <td>
+                                            @Html.TextBoxFor(o => Model.Details[i].SecondTime, new { @class = "OnlyEdit", @type = "number" })
+                                        </td>
+                                        <td>
                                             @Html.TextBoxFor(o => Model.Details[i].Pressure, new { @class = "OnlyEdit", @type = "number", @onchange = "value=PressureCheck(value)" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(o => Model.Details[i].PeelOff, new { @class = "OnlyEdit" ,@maxlength="5" })
+                                            @Html.TextBoxFor(o => Model.Details[i].PeelOff, new { @class = "OnlyEdit", @maxlength = "5" })
                                         </td>
                                         <td>
                                             <select id="Details_@{@i}__Cycles" name="Details[@{@i}].Cycles">
@@ -647,10 +651,10 @@
                         }
 
                         if (data.Teamwear == true) {
-                            $('#Main_IsTeamwear').attr('checked', 'checked');
+                            $('#Main_Teamwear').attr('checked', 'checked');
                         }
                         else {
-                            $('#Main_IsTeamwear').removeAttr('checked');
+                            $('#Main_Teamwear').removeAttr('checked');
                         }
 
                         $('#Main_ArtworkTypeID').empty();
@@ -1181,6 +1185,7 @@
                     else {
                         $(`#${domIdHead}Temperature`).val(data.DetailData.Temperature);
                         $(`#${domIdHead}Time`).val(data.DetailData.Time);
+                        $(`#${domIdHead}SecondTime`).val(data.DetailData.SecondTime);
                         $(`#${domIdHead}Pressure`).val(data.DetailData.Pressure);
                         $(`#${domIdHead}PeelOff`).val(data.DetailData.PeelOff);
                         $(`#${domIdHead}Cycles`).val(data.DetailData.Cycles);
