ISP20230023 - 寄信 To、CC 將全形變半形字，Sample RFT [Download]、[SendMail] 改為每一次呼叫都從撈DB，避免多開造成的錯誤。

--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
@@ -328,7 +328,7 @@
 
         function ClickDownload() {
 
-            window.location.href = '@Url.Action("Download")';
+            window.location.href = '@Url.Action("Download", new { ID = @Model.sampleRFTInspection.ID })';
 
         }
 
@@ -338,7 +338,7 @@
                 url: "@Url.Action("SendMail", "InspBySPQuery")",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({}),
+                data: JSON.stringify({ID : @Model.sampleRFTInspection.ID }),
                 async: false,
                 success: function (data) {
                     if (data.Result) {
