ISP20230097 - [PullingTest]、[HeatTransferWash]、[DailyMoisture]、[AccessoryOvenWash] 畫面微調。

--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/Index.cshtml
@@ -264,7 +264,7 @@
                     </table>
                 </div>
                 <div style="margin-top: 1em;min-width:200vw;">
-                    <table cellspacing="100" class="DataTable DetailTable table table-striped display;" style="width:100%">
+                    <table cellspacing="100" class="DataTable DetailTable table table-striped display;" style="width:420vw;">
                         <thead>
                             <tr class="row-name" id="row-name">
                                 <th style="width:5vw">Report No</th>
