ISP20230117 - [SearchList] 增加Moisture的Report Date輸入

--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -523,7 +523,8 @@
 
             let includes_MOCKUP = currentType.toUpperCase().includes("MOCKUP");
             let includes_HTWash = currentType.toUpperCase().includes("HT WASH");
-            if (!includes_MOCKUP && !includes_HTWash) {
+            let includes_Moistureh = currentType.toUpperCase().includes("MOISTURE");
+            if (!includes_MOCKUP && !includes_HTWash && !includes_Moistureh) {
                 $(".mockupOnly").val('');
                 $(".mockupOnly").attr("disabled", "disabled");
             }
